--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,6 @@
 page_product_size: 12
 page_farmer_size: 12
 page_post_size: 6
+load_more_comment_size: 2
+load_more_reply_comment_size: 2
+length_comment: 80
