--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,3 +5,4 @@ load_more_comment_size: 2
 load_more_reply_comment_size: 2
 length_comment: 80
 search_objects: ["Product", "User"]
+limit_popular_posts: 3
